// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultMessage should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: -0.875rem;
}

.c0 > * {
  text-align: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 15rem;
  height: 15rem;
}

.c2 {
  font-family: Inter,sans-serif;
  font-size: 2rem;
  line-height: 2.625rem;
  font-weight: 600;
  font-style: normal;
  margin: 0;
  margin-top: 2rem;
}

.c3 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  max-width: 37.5rem;
  margin: 0;
  margin-top: 0.5rem;
}

.c3 strong {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

<body>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <svg />
      </div>
      <h2
        class="c2"
      >
        Title test
      </h2>
      <p
        class="c3"
      >
        Desciption test
      </p>
    </div>
  </div>
</body>
`;

exports[`ResultMessage should render with more space 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: -0.875rem;
}

.c0 > * {
  text-align: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 15rem;
  height: 15rem;
}

.c2 {
  font-family: Inter,sans-serif;
  font-size: 1.5rem;
  line-height: 2.0125rem;
  font-weight: 600;
  font-style: normal;
  margin: 0;
  margin-top: 3rem;
}

.c3 {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  max-width: 37.5rem;
  margin: 0;
  margin-top: 1rem;
}

.c3 strong {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

<body>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <svg />
      </div>
      <h2
        class="c2"
      >
        Title test
      </h2>
      <p
        class="c3"
      >
        Desciption test
      </p>
    </div>
  </div>
</body>
`;
